<resources>
    <string name="app_name">Animation Practice</string>
    <string name="digite_su_contrase_a">Digite su contraseña</string>
    <string name="click_aqui">Click aquí</string>
    <string name="digite_su_correo">Digite su correo</string>
    <string name="bienvenidos_a_tu_app_android">Bienvenidos\na tu App Android</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="animation_indications_heart">Si estas feliz de haber ingresado \n toca el corazón</string>
    <string name="skip_to_animation_page">Skip to animation page</string>
    <string name="blink">Blink</string>
    <string name="zoom">Zoom</string>
    <string name="rotate">Rotate</string>
    <string name="trans">Trans</string>
    <string name="fade">Fade</string>
    <string name="stop">STOP</string>
</resources>