<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnimationsMenuActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/blink"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/blink"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        style="@style/buttonStyle"
        />

    <Button
        android:id="@+id/zoom"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/zoom"
        app:layout_constraintEnd_toStartOf="@+id/rotate"
        app:layout_constraintStart_toEndOf="@+id/blink"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:flow_horizontalAlign="center"
        android:textAlignment="center"
        style="@style/buttonStyle"/>

    <Button
        android:id="@+id/rotate"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        style="@style/buttonStyle"/>

    <Space
        android:id="@+id/horizontalSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blink"
        app:layout_constraintVertical_bias="0.0" />

    <Space
        android:id="@+id/secondSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trans"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/trans"
        style="@style/buttonStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/trans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontalSpace"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fade"
        style="@style/buttonStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:text="@string/fade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalSpace" />

    <Button
        android:id="@+id/stop"
        style="@style/buttonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/secondSpace"
        android:layout_marginTop="8dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>